{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 33,
  "lineage": "4a52a6ee-f08b-6fd1-ea05-ae4111e214ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_lab_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725490509:internet-gateway/igw-04ed8cdf565bc2ccd",
            "id": "igw-04ed8cdf565bc2ccd",
            "owner_id": "851725490509",
            "tags": {
              "Name": "TF-Lab_IGW"
            },
            "tags_all": {
              "Name": "TF-Lab_IGW"
            },
            "vpc_id": "vpc-00ac0a886c180202c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_lab_pub_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725490509:route-table/rtb-07ad666fb4b63f15a",
            "id": "rtb-07ad666fb4b63f15a",
            "owner_id": "851725490509",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ed8cdf565bc2ccd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF_pub_rtb"
            },
            "tags_all": {
              "Name": "TF_pub_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ac0a886c180202c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_lab_igw",
            "aws_vpc.tf_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_lab_pv_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-08dc143eecaf0353b",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF_pv_rtb"
            },
            "tags_all": {
              "Name": "TF_pv_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ac0a886c180202c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_lab_rtb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08588f2b2b38d71a4",
            "route_table_id": "rtb-07ad666fb4b63f15a",
            "subnet_id": "subnet-0223b8ad5292330e4"
          },
          "dependencies": [
            "aws_internet_gateway.tf_lab_igw",
            "aws_route_table.tf_lab_pub_rtb",
            "aws_subnet.public_subnet",
            "aws_vpc.tf_lab_vpc",
            "data.aws_availability_zones.ava_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d712e0ecdc608ab6",
            "route_table_id": "rtb-07ad666fb4b63f15a",
            "subnet_id": "subnet-0fb78e273eb5a3a77"
          },
          "dependencies": [
            "aws_internet_gateway.tf_lab_igw",
            "aws_route_table.tf_lab_pub_rtb",
            "aws_subnet.public_subnet",
            "aws_vpc.tf_lab_vpc",
            "data.aws_availability_zones.ava_zone"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ed6284a485c1350",
            "route_table_id": "rtb-07ad666fb4b63f15a",
            "subnet_id": "subnet-0d72ec4ba955cf33d"
          },
          "dependencies": [
            "aws_internet_gateway.tf_lab_igw",
            "aws_route_table.tf_lab_pub_rtb",
            "aws_subnet.public_subnet",
            "aws_vpc.tf_lab_vpc",
            "data.aws_availability_zones.ava_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725490509:subnet/subnet-0c5ac30ec63982439",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5ac30ec63982439",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725490509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pv-1"
            },
            "tags_all": {
              "Name": "pv-1"
            },
            "vpc_id": "vpc-00ac0a886c180202c"
          },
          "dependencies": [
            "aws_vpc.tf_lab_vpc",
            "data.aws_availability_zones.ava_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725490509:subnet/subnet-069db4ea1ec3f359c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069db4ea1ec3f359c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725490509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pv-2"
            },
            "tags_all": {
              "Name": "pv-2"
            },
            "vpc_id": "vpc-00ac0a886c180202c"
          },
          "dependencies": [
            "aws_vpc.tf_lab_vpc",
            "data.aws_availability_zones.ava_zone"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725490509:subnet/subnet-05131f24cdef50775",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05131f24cdef50775",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725490509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pv-3"
            },
            "tags_all": {
              "Name": "pv-3"
            },
            "vpc_id": "vpc-00ac0a886c180202c"
          },
          "dependencies": [
            "aws_vpc.tf_lab_vpc",
            "data.aws_availability_zones.ava_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725490509:subnet/subnet-0223b8ad5292330e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0223b8ad5292330e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725490509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-1"
            },
            "tags_all": {
              "Name": "pb-1"
            },
            "vpc_id": "vpc-00ac0a886c180202c"
          },
          "dependencies": [
            "aws_vpc.tf_lab_vpc",
            "data.aws_availability_zones.ava_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725490509:subnet/subnet-0fb78e273eb5a3a77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb78e273eb5a3a77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725490509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-2"
            },
            "tags_all": {
              "Name": "pb-2"
            },
            "vpc_id": "vpc-00ac0a886c180202c"
          },
          "dependencies": [
            "aws_vpc.tf_lab_vpc",
            "data.aws_availability_zones.ava_zone"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725490509:subnet/subnet-0d72ec4ba955cf33d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d72ec4ba955cf33d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725490509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-3"
            },
            "tags_all": {
              "Name": "pb-3"
            },
            "vpc_id": "vpc-00ac0a886c180202c"
          },
          "dependencies": [
            "aws_vpc.tf_lab_vpc",
            "data.aws_availability_zones.ava_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725490509:vpc/vpc-00ac0a886c180202c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-09081e8ee303fd1b8",
            "default_route_table_id": "rtb-0bb539b1c52898ca1",
            "default_security_group_id": "sg-0cb7fadc5cb1c8ea6",
            "dhcp_options_id": "dopt-0552794ee29cb6907",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ac0a886c180202c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb539b1c52898ca1",
            "owner_id": "851725490509",
            "tags": {
              "Name": "Assignment_TF_lab"
            },
            "tags_all": {
              "Name": "Assignment_TF_lab"
            }
          }
        }
      ]
    }
  ]
}